# CryptoInvestV2

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
scripts/: run_api.py  run_backtest.py  run_signal.py  run_worker.py  verify_architecture.sh
src/cryptoinvest/: __init__.py  backtest.py  config.py  indicators.py  levels.py  service.py  signals.py  snapshot.py  store.py  worker.py
tests/: test_backtest.py  test_indicators.py  test_service.py  test_signals.py  test_store.py  test_worker.py
